--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -21,6 +21,8 @@
 
 <div class="row">
     <div class="col-md-12">
+        @if (Model.Count > 0 )
+        {
         <table class="table table-striped"> 
             <thead>
                 <tr><th>Id</th>
@@ -43,5 +45,10 @@
                 }
             </tbody>
         </table>
+        }
+        else
+        {
+            <h2>Não existem livros para serem apresentados...</h2>
+        }
     </div>
 </div>
