--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -1,6 +1,7 @@
 @model ICollection<Emprestimo>
 @{
     ViewData["Title"] = "Listagem de Empréstimos";
+    string Classe = "";
 }
 
 <div class="row">
@@ -22,7 +23,9 @@
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-striped"> 
+        @if(Model.Count!=0)
+        {
+        <table class="table table-striped "> 
             <thead>
                 <tr><th>Id</th>
                 <th>Usuario</th>
@@ -34,9 +37,18 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach(Emprestimo e in Model)
+                @foreach(var e in Model)
                 {
-                <tr>
+                    @if((System.DateTime.Compare(System.DateTime.Now, e.DataDevolucao)> 0))
+                    {
+                        Classe="text-danger";
+                    }
+                    else
+                    {
+                        Classe="";
+                    }
+                
+                <tr class="@Classe">
                     <td>@e.Id</td>
                     <td>@e.NomeUsuario</td>
                     <td>@e.DataEmprestimo.ToString("dd/MM/yyyy")</td>
@@ -48,6 +60,11 @@
                 }
             </tbody>
         </table>
+        }
+    
+     else{
+        <h3>Nenhum Registro Encontrado</h3>
+     }
     </div>
 </div>
 
